--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <p>3:15pm Rewire Electrical Outlets in High School Classroom.</p>
   <p>4:30pm Issue Bot Lithium-Ion Battery charge, initiate nap sequence on quad couches.</p>
 
-  <h2>Issue Bot Tasks</h3>
+  <h3>Issue Bot Tasks</h3>
 
-  <li>
-    <ul>Debug Ruby Labs
-    <ul>Massage Joe's Back</ul>
-    <ul>Archive Steph's Gif collection<ul>
-    <ul>Take out trash</ul>
-  </li>
+  <ul>
+    <li>Debug Ruby Labs</li> 
+    <li>Massage Joe's Back</li>
+    <li>Archive Steph's Gif collection</li>
+    <li>Take out trash</li>
+  </ul>
 
   <h2 Issue Bot Camera Capture Archive</h2>
 
