--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <h3>Issue Bot Tasks</h3>
 
   <ul>
-    <li>Debug Ruby Labs</li> 
+    <li>Debug Ruby Labs</li>
     <li>Massage Joe's Back</li>
     <li>Archive Steph's Gif collection</li>
     <li>Take out trash</li>
   </ul>
 
-  <h2 Issue Bot Camera Capture Archive</h2>
+  <h2> Issue Bot Camera Capture Archive</h2>
 
   <img src="images/adam.jpg">
   <img src="images/adam.jpg" alt="Avi">
